--- a/testimonios.html
+++ b/testimonios.html
@@ -57,7 +57,8 @@
     </nav>
   </header>
   <main>
-    <section>
+    <!-- Carusel -->
+    <section class="col-12">
       <div class="container-fluid-center">
         <h1>Testimonios</h1>
         <div id="carouselTestimonios" class="carousel slide" data-bs-ride="carousel">
@@ -73,28 +74,24 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/image3.jpg" alt="testimonios_exito" class="d-block w-100">
               <div class="carousel-caption d-block testimonio">
                 <h5>¡Encontré una familia sin buscarla!</h5>
                 <p>Lucía, CABA.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/image5.jpg" class="d-block w-100" alt="nietos">
               <div class="carousel-caption d-block testimonio">
                 <h5>Mi hijo tiene nuevos abuelos, los ama y disfruta jugar con ellos. </h5>
                 <p>Carla, Ciudad de Córdoba.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/image6.jpg" class="d-block w-100" alt="millenial">
               <div class="carousel-caption d-block testimonio">
                 <h5>Confirmo, ¡Soy una abuela de corazón millenial!</h5>
                 <p>Elvira, Ciudad de Mendoza.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/image7.jpg" class="d-block w-100" alt="descubrimiento">
               <div class="carousel-caption d-block testimonio">
                 <h5>Me siento más joven que nunca.</h5>
                 <p>Osvaldo, Provincia de Tucumán.</p>
@@ -112,19 +109,46 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <br><br>
-        <div class="container-fluid-center">
-          <div class="row">
-            <div class="col-6">
-              <img src="images/icecream.jpg" alt="beneficios" class="foto_testimonios">
-            </div>
-            <div class="col-6 testimonio">
-              <h3>¡Sé parte de nuestra comunidad!</h3>
-              <p class="textSection">Maravillosos beneficios, además de cultivar relaciones humanas pronto podrás
-                acceder a
-                beneficios en locales gastronómicos, cines, parques de juegos y más.</p>
-            </div>
-          </div>
+      </div>
+    </section>
+    <!-- Testimonios Mobile -->
+    <!-- 1 bloque -->
+    <section class="col-12 testimonios-mobil">
+      <div class="col-12 position-relative d-flex justify-content-center align-items-center">
+        <img src="images/image3.jpg" class="w-100" alt="testimonios_exito">
+        <div class="position-absolute testimonio">
+          <h5>¡Encontré una familia sin buscarla!</h5>
+          <p>Lucía, CABA.</p>
+        </div>
+      </div>
+    </section>
+    <!-- 2 bloque -->
+    <section class="col-12 testimonios-mobil">
+      <div class="col-12 position-relative d-flex justify-content-center align-items-center">
+        <img src="images/image5.jpg" class="w-100" alt="nietos">
+        <div class="position-absolute testimonio">
+          <h5>Mi hijo tiene nuevos abuelos, los ama y disfruta jugar con ellos. </h5>
+          <p>Carla, Ciudad de Córdoba.</p>
+        </div>
+      </div>
+    </section>
+    <!-- 3 bloque -->
+    <section class="col-12 testimonios-mobil">
+      <div class="col-12 position-relative d-flex justify-content-center align-items-center">
+        <img src="images/image6.jpg" class="w-100" alt="millenial">
+        <div class="position-absolute testimonio">
+          <h5>Confirmo, ¡Soy una abuela de corazón millenial!</h5>
+          <p>Elvira, Ciudad de Mendoza.</p>
+        </div>
+      </div>
+    </section>
+    <!-- 4 bloque -->
+    <section class="col-12 testimonios-mobil">
+      <div class="col-12 position-relative d-flex justify-content-center align-items-center">
+        <img src="images/image7.jpg" class="w-100" alt="descubrimiento">
+        <div class="position-absolute testimonio">
+          <h5>Me siento más joven que nunca.</h5>
+          <p>Osvaldo, Provincia de Tucumán.</p>
         </div>
       </div>
     </section>
